src/app/components/commit-history/commit-history.component.scss
.hidden-until-hover {
  max-width: 7em;
  white-space: nowrap;
  transition: max-width .5s ease-in-out, padding-right .5s;
  overflow: hidden;
  &:hover {
    max-width: 15em;
    transition-delay: .5s;
  }
}

.vertical-content-hidden {
  max-height: 2.5em;
  transition: max-height .5s ease-in-out;
  overflow: hidden;
  &:hover {
    max-height: 10em;
    overflow-y: auto;
  }
}

td .btn {
  margin: -1.5em 0;
}

.commit-wrapper {
  height: calc(100vh - 8rem);
  overflow-y: auto;
}

.badge-info {
  padding-top: .4em;
  padding-bottom: .4em;
}

.badge {
  padding-left: .6em;
  padding-right: .6em;
}

